--- a/index.html
+++ b/index.html
@@ -1,45 +1,254 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> 
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <title>ЖК мелодия</title>
-</head>
-<body>
+  </head>
+  <body>
     <header class="header">
-        <div class="navbar">
-            <a href="#" class="logo">
-              <img src="images/logo.svg" alt="logo">
-            </a>
-            <nav class="navbar-nav">
-                <ul class="navbar-menu">
-                    <li class="navbar-item">
-                        <a href="#" class="navbar-link">Подобрать <br> квартиру</a>
-                    </li>
-                    <li class="navbar-item">
-                        <a href="#" class="navbar-link">Забронировать <br> квартиру</a>
-                    </li>
-                    <li class="navbar-item">
-                        <a href="#" class="navbar-link">Ход <br> строительства</a>
-                    </li>
-                    <li class="navbar-item">
-                        <a href="#" class="navbar-link">Проектная<br> декларация</a>
-                    </li>
-                </ul>
-            </nav>
-            <div class="navbar-contacts">
-                <span class="navbar-text">Закажите звонок:</span>
-                <a class="navbar-phone" href="tel:+78431234567">8 (843) 123-45-67</a>
-            </div>
-            <!-- /.navbar-contacts -->
+      <div class="navbar">
+        <a href="#" class="logo">
+          <img src="images/logo.svg" alt="logo" />
+        </a>
+        <nav class="navbar-nav">
+          <ul class="navbar-menu">
+            <li class="navbar-item">
+              <a href="#" class="navbar-link"
+                >Подобрать <br />
+                квартиру</a
+              >
+            </li>
+            <li class="navbar-item">
+              <a href="#" class="navbar-link"
+                >Забронировать <br />
+                квартиру</a
+              >
+            </li>
+            <li class="navbar-item">
+              <a href="#" class="navbar-link"
+                >Ход <br />
+                строительства</a
+              >
+            </li>
+            <li class="navbar-item">
+              <a href="#" class="navbar-link"
+                >Проектная<br />
+                декларация</a
+              >
+            </li>
+          </ul>
+        </nav>
+        <div class="navbar-contacts">
+          <span class="navbar-text">Закажите звонок:</span>
+          <a class="navbar-phone" href="tel:+78431234567">8 (843) 123-45-67</a>
         </div>
-        <!-- /.navbar -->
+        <!-- /.navbar-contacts -->
+      </div>
+      <!-- /.navbar -->
     </header>
-</body>
+    <div class="main">
+      <div class="main-image">
+        <svg
+          class="home-image"
+          width="734"
+          height="640"
+          viewBox="0 0 734 640"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+        >
+          <rect width="734" height="640" fill="url(#pattern0)" />
+          <defs>
+            <pattern
+              id="pattern0"
+              patternContentUnits="objectBoundingBox"
+              width="1"
+              height="1"
+            >
+              <use
+                xlink:href="#image0"
+                transform="translate(-0.00408719) scale(0.0013624 0.0015625)"
+              />
+            </pattern>
+            <image
+              id="image0"
+              width="740"
+              height="640"
+              xlink:href="images/home.png"
+            />
+          </defs>
+          <path data-flor="02"
+            d="M222 533L442.8 541L512 527.3V549L443.5 568.7L222 557.7V533Z"
+            fill="#3595F6"
+            fill-opacity="0.75"
+          />
+          <path data-flor="03"
+            d="M223 532V507L443.3 510.3L513 507V527L443.7 540L223 532Z"
+            fill="#3595F6"
+            fill-opacity="0.75"
+          />
+          <path data-flor="04"
+            d="M223 506V481H444H513V504L445 511L223 506Z"
+            fill="#3595F6"
+            fill-opacity="0.75"
+          />
+          <path data-flor="05"
+            d="M223 482V457L444.3 453.3L512 460V482H444"
+            fill="#3595F6"
+            fill-opacity="0.75"
+          />
+          <path data-flor="06"
+            d="M223 456V430L444.5 426.7L513 437.7V459L444 452.3L223 456Z"
+            fill="#3595F6"
+            fill-opacity="0.75"
+          />
+          <path data-flor="07"
+            d="M222 429V405.3L443 393L514 416V437.3L443 425L222 429Z"
+            fill="#3595F6"
+            fill-opacity="0.75"
+          />
+          <path data-flor="08"
+            d="M222 407V382L444.2 365.7L514 394.3V415L443.7 393.3L222 407Z"
+            fill="#3595F6"
+            fill-opacity="0.75"
+          />
+          <path data-flor="09"
+            d="M222 382V357L444.5 336.7L514 373.3V394L442 365.3L222 382Z"
+            fill="#3595F6"
+            fill-opacity="0.75"
+          />
+          <path data-flor="10"
+            d="M222 356V332L445 307.3L514 351.3V373L444.7 335L222 356Z"
+            fill="#3595F6"
+            fill-opacity="0.75"
+          />
+          <path data-flor="11"
+            d="M222 331V307L444.5 278.3L514 329.3V350L443.7 307.7L222 331Z"
+            fill="#3595F6"
+            fill-opacity="0.75"
+          />
+          <path data-flor="12"
+            d="M221 307V283L443.3 250L514 309.3V329L444 278.3L221 307Z"
+            fill="#3595F6"
+            fill-opacity="0.75"
+          />
+          <path data-flor="13"
+            d="M222 282V258L443.2 223L513 287V308L444.3 249.7L222 282Z"
+            fill="#3595F6"
+            fill-opacity="0.75"
+          />
+          <path data-flor="14"
+            d="M222 258V233L444.3 195L513 265.3V286L444 222L222 258Z"
+            fill="#3595F6"
+            fill-opacity="0.75"
+          />
+          <path data-flor="15"
+            d="M222 232V207L442.8 163.3L513 242.3V265L444 191.7L222 232Z"
+            fill="#3595F6"
+            fill-opacity="0.75"
+          />
+          <path data-flor="16"
+            d="M223 208V183L443 135L513 220V243L442.3 163.7L223 208Z"
+            fill="#3595F6"
+            fill-opacity="0.75"
+          />
+          <path data-flor="17"
+            d="M222 183V158L441.8 106L513 198.3V221L443.3 134.7L222 183Z"
+            fill="#3595F6"
+            fill-opacity="0.75"
+          />
+          <path data-flor="18"
+            d="M222 158V132L444 75.3L513 177V198L443.7 106.3L222 158Z"
+            fill="#3595F6"
+            fill-opacity="0.75"
+          />
+        </svg>
+      </div>
+      <!-- /.main-image -->
+      <div class="main-info">
+        <h2 class="main-title">Выберите желаемый этаж</h2>
+
+        <div class="counter-group">
+          <button class="counter-button counter-up">
+            <img class="counter-arrow-up" src="images/button-up.svg" alt="up" />
+          </button>
+          <span class="counter">02</span>
+          <button class="counter-button counter-down">
+            <img
+              class="counter-arrow-down"
+              src="images/button-up.svg"
+              alt="up"
+            />
+          </button>
+        </div>
+        <!-- /.counter-group -->
+        <button class="button button-primary">
+          Смотреть квартиры на этаже
+        </button>
+      </div>
+      <!-- /.main-info -->
+    </div>
+    <!-- /.main -->
+    <footer class="footer">
+        <div class="footer-navbar">
+                <div class="footer-group">
+                    <a href="#" class="logo">
+                        <img src="images/logo2.svg" alt="logo" />
+                      </a>
+                      <div class="footer-contacts">
+                        <span class="footer-text">Закажите звонок:</span>
+                        <a class="footer-phone" href="tel:+78431234567">8 (843) 123-45-67</a>
+                      </div>
+                      <div class="icons">
+                        <a href="#" class="icon-link">
+                            <img src="images/001-facebook.svg" alt="icon" />
+                          </a>
+                          <a href="#" class="icon-link">
+                            <img src="images/002-instagram.svg" alt="icon" />
+                          </a>
+                          <a href="#" class="icon-link">
+                            <img src="images/003-twitter.svg" alt="icon" />
+                          </a>
+                          <a href="#" class="icon-link">
+                            <img src="images/004-youtube.svg" alt="icon" />
+                          </a>
+                      </div>
+                </div>
+                <!-- /.footer-group -->
+            
+              <div class="footer-navbar-menu">
+                <ul class="footer-menu">
+                    <li class="footer-item">
+                      <a href="#" class="footer-link"
+                        >Политика конфиденциальности</a
+                      >
+                    </li>
+                    <li class="footer-item">
+                      <a href="#" class="footer-link"
+                        >Публичная оферта</a
+                      >
+                    </li>
+                    <li class="footer-item">
+                      <a href="#" class="footer-link"
+                        >Контакты</a
+                      >
+                    </li>
+              </div>
+              <!-- /.icons -->
+        </div>
+        <!-- /.footer-navbar -->
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="js/main.js"></script>
+  </body>
 </html>
